<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   android:background="@color/colorPrimary"
    tools:ignore="Overdraw">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/movie_detail"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:background="@color/colorPrimaryLight">


            <android.support.constraint.ConstraintLayout
                android:id="@+id/parent_layout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="8dp"
               >

                <ImageView
                    android:id="@+id/movie_poster"
                    android:layout_width="@dimen/detail_poster_image"
                    android:layout_height="@dimen/detail_poster_image"
                    android:contentDescription="@string/movie_poster_description"
                    android:foregroundGravity="fill_horizontal"
                    android:scaleType="fitXY"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/movie_title_caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/layout_margin"
                    android:layout_marginStart="@dimen/layout_margin"
                    android:layout_marginTop="@dimen/layout_margin"
                    android:padding="@dimen/tv_padding"
                    android:text="@string/movie_title"
                    android:textColor="@color/colorPrimaryText"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/movie_poster" />

                <TextView
                    android:id="@+id/movie_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/layout_margin"
                    android:layout_marginLeft="@dimen/layout_margin"
                    android:layout_marginRight="@dimen/layout_margin"
                    android:layout_marginStart="@dimen/layout_margin"
                    android:layout_marginTop="@dimen/layout_margin"
                    android:padding="@dimen/tv_padding"
                    android:text="@string/movie_title"
                    android:textColor="@color/colorPrimaryText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.105"
                    app:layout_constraintStart_toEndOf="@+id/movie_title_caption"
                    app:layout_constraintTop_toBottomOf="@+id/movie_poster" />

                <TextView
                    android:id="@+id/movie_rating_caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/layout_margin"
                    android:layout_marginStart="@dimen/layout_margin"
                    android:layout_marginTop="@dimen/layout_margin"
                    android:text="@string/movie_rating"
                    android:textColor="@color/colorPrimaryText"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/movie_title_caption" />

                <TextView
                    android:id="@+id/movie_rating"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/layout_margin"
                    android:layout_marginLeft="@dimen/layout_margin"
                    android:layout_marginRight="@dimen/layout_margin"
                    android:layout_marginStart="@dimen/layout_margin"
                    android:layout_marginTop="@dimen/layout_margin"
                    android:text="@string/movie_rating"
                    android:textColor="@color/colorPrimaryText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.105"
                    app:layout_constraintStart_toEndOf="@+id/movie_rating_caption"
                    app:layout_constraintTop_toBottomOf="@+id/movie_title" />

                <TextView
                    android:id="@+id/movie_release_date_caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/layout_margin"
                    android:layout_marginStart="@dimen/layout_margin"
                    android:layout_marginTop="@dimen/layout_margin"
                    android:text="@string/movie_released"
                    android:textColor="@color/colorPrimaryText"
                    android:textStyle="bold"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/movie_rating_caption" />

                <TextView
                    android:id="@+id/movie_release_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/layout_margin"
                    android:layout_marginLeft="@dimen/layout_margin"
                    android:layout_marginRight="@dimen/layout_margin"
                    android:layout_marginStart="@dimen/layout_margin"
                    android:layout_marginTop="@dimen/layout_margin"
                    android:text="@string/movie_released"
                    android:textColor="@color/colorPrimaryText"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.105"
                    app:layout_constraintStart_toEndOf="@+id/movie_release_date_caption"
                    app:layout_constraintTop_toBottomOf="@+id/movie_rating" />

                <TextView
                    android:id="@+id/movie_overview_caption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/layout_margin"
                    android:layout_marginLeft="@dimen/layout_margin"
                    android:layout_marginRight="@dimen/layout_margin"
                    android:layout_marginStart="@dimen/layout_margin"
                    android:layout_marginTop="@dimen/layout_margin"
                    android:text="@string/movie_overview"
                    android:textColor="@color/colorPrimaryText"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/movie_release_date_caption" />

                <TextView
                    android:id="@+id/movie_overview"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="@dimen/layout_margin"
                    android:layout_marginEnd="@dimen/layout_margin"
                    android:layout_marginLeft="@dimen/layout_margin"
                    android:layout_marginRight="@dimen/layout_margin"
                    android:layout_marginStart="@dimen/layout_margin"
                    android:layout_marginTop="8dp"
                    android:text="@string/movie_overview"
                    android:textColor="@color/colorPrimaryText"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/movie_overview_caption" />

                <ToggleButton
                    android:id="@+id/favorite_abtn"
                    android:layout_width="@dimen/favorite_btn"
                    android:layout_height="@dimen/favorite_btn"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_marginBottom="@dimen/layout_margin"
                    android:layout_marginEnd="@dimen/layout_margin"
                    android:layout_marginLeft="@dimen/layout_margin"
                    android:layout_marginRight="@dimen/layout_margin"
                    android:layout_marginStart="@dimen/layout_margin"
                    android:layout_marginTop="@dimen/layout_margin"
                    android:textOff=""
                    android:textOn=""
                    app:layout_constraintBottom_toBottomOf="@+id/movie_poster"
                    app:layout_constraintEnd_toEndOf="@+id/movie_poster"
                    app:layout_constraintHorizontal_bias="1.0"
                    app:layout_constraintStart_toStartOf="@+id/movie_poster"
                    app:layout_constraintTop_toTopOf="@+id/movie_poster"
                    app:layout_constraintVertical_bias="1.0" />

            </android.support.constraint.ConstraintLayout>

            <RelativeLayout
                android:id="@+id/trailer_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/layout_margin"
                android:layout_marginLeft="@dimen/layout_margin"
                android:layout_marginRight="@dimen/layout_margin"
                android:layout_marginStart="@dimen/layout_margin"
                android:layout_marginTop="@dimen/layout_margin"
                app:layout_constraintBottom_toTopOf="@+id/review_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/parent_layout">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/trailer_rv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                </android.support.v7.widget.RecyclerView>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/review_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/layout_margin"
                android:layout_marginEnd="@dimen/layout_margin"
                android:layout_marginLeft="@dimen/layout_margin"
                android:layout_marginRight="@dimen/layout_margin"
                android:layout_marginStart="@dimen/layout_margin"
                android:layout_marginTop="@dimen/layout_margin"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/trailer_layout">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/review_rv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                </android.support.v7.widget.RecyclerView>
            </RelativeLayout>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>
</LinearLayout>
